# web-scraping-engine-specs

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: config.yaml
config/sites/: abb.yaml
src/: base_scrapping.py  main.py  utils.py
src/scrappers/: abb_scrapper.py
src/wrappers/: __init__.py  request.py  selenium_connection.py
