[project]
name = "web_scrapping"
version = "1.0.0"
dependencies = [
    "hydra-core==1.3.2",
    "loguru==0.7.3",
    "lxml==5.3.2",
    "omegaconf==2.3.0",
    "pandas==2.2.3",
    "Requests==2.32.3",
    "selenium==4.31.0",
    "tqdm==4.67.1",
]
requires-python = ">=3.13"
authors = [
  {name = "Rafael Cirino"}
]
maintainers = [
  {name = "Rafael Cirino"}
]
description = "Lovely Spam! Wonderful Spam!"
readme = "README.rst"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["scrapping", "web", "abb", "selenium"]